# bevy_physics_weekend

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: mod.rs
assets/shaders/: custom_material.wgsl
docs/: trobleshooting.md  update-readme.md
examples/: ball_stack.rs  ball_stack_rapier.rs  bounds.rs  sandbox.rs  shader_material.rs  simple.rs  stack.rs  stack_rapier.rs  teleportation_fix.rs
examples/helper/: ball_stack.rs  camera_controller.rs  editor.rs  fps.rs  mod.rs  reset.rs  stack_config.rs
src/: body.rs  bounds.rs  broadphase.rs  contact.rs  dynamics.rs  gjk.rs  intersect.rs  lib.rs  manifold.rs  narrowphase.rs  resolve_contact.rs  rigid_body.rs  shapes.rs
src/bounds/: aabb.rs  debug.rs  mod.rs  obb.rs  sphere.rs
src/colliders/: convex.rs  mod.rs
src/constraints/: constraint_constant_velocity.rs  constraint_distance.rs  constraint_hinge_quat.rs  constraint_motor.rs  constraint_mover.rs  constraint_orientation.rs  constraint_penetration.rs  mod.rs
src/debug/: mod.rs  report.rs
src/debug_render/: mod.rs
src/intersect/: aabb.rs  gjk.rs  mod.rs  sphere.rs
src/math/: matrix.rs
src/phase/: ballistic_impulses.rs  broad.rs  broadphase.rs  constraints.rs  dynamics.rs  gravity.rs  manifold.rs  mod.rs  narrow.rs  narrowphase.rs  resolve_contact.rs  transform.rs
src/primitives/: aabb.rs  body.rs  bound.rs  collider.rs  contact.rs  manifold.rs  mod.rs
src/shapes/: mod.rs  shape_box.rs  shape_convex.rs  shape_sphere.rs
tools/: record.sh  report.sh
