[package]
name = "bevy_physics_weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["static", "simd"]
simd = []
static = []
dynamic = []
timing = []
trace = [
    "bevy/trace_chrome"
]

[dependencies]
bevy = { version = "0.6.0", default-features = false, features = [
    "bevy_render",
] }
bevy-inspector-egui = { version = "0.7.1" }
bevy_polyline = "0.1"
rayon = "1.5.1"

[dev-dependencies]
bevy = { version = "0.6.0", default-features = true }
bevy-inspector-egui = { version = "0.7.1" }
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master" }


#[patch.crates-io]
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }